Fixed Unit button overlapping the Library menu, fixed View Exercise and View Workout content overflowing and going out of the viewport when there is too much info, fixed units being taken as minutes even though they were seconds or hours and then converted again in seconds even if nothing changed, fixed edit exercise page having the wrong title and button text, added edit link to View Workout, fixed Added Fields from Create/Edit exercise having a small container

--- a/src/components/common/Navigation/Navigation.module.css
+++ b/src/components/common/Navigation/Navigation.module.css
@@ -71,11 +71,13 @@ nav{
   height: calc(100vh - 75px);
   display: flex;
   animation: slideUp 0.2s;
+  z-index: 9999;
 }
 .libraryMenu .bg{
   width: 100vw;
   height: 100%;
   backdrop-filter: blur(20px);
+  z-index: 9999;
 }
 .libraryMenu .menuContainer{
   position: absolute;
@@ -85,6 +87,7 @@ nav{
   flex-direction: column;
   align-items: end;
   gap: 10px;
+  z-index: 9999;
 }
 @keyframes slideUp{
   from{
