--- a/src/components/common/UnitSelector/UnitSelector.module.css
+++ b/src/components/common/UnitSelector/UnitSelector.module.css
@@ -4,7 +4,6 @@
     gap: 10px;
     height: 40px;
     overflow: hidden;
-    z-index: 200;
 }
 .unitSelector .unitButton{
     height: 40px;
